[package]
name = "cryptoinfo"
version = "1.0.0"
edition = "2021"
build = "build.rs"
description = "Rust And QML."
readme = "README.md"
license = "MIT"
categories = ["gui", "crypto"]
keywords = ["Qt", "QML", "Rust",]

[dependencies]
enigo = "0.0.14"
chrono = "0.4"
qmetaobject = "0.2"
cstr = "0.2"
cpp = "0.5"
log = "0.4"
env_logger = "0.9"
platform-dirs = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crypto-hash = "0.3"
aes = "0.7"
block-modes="0.8"
hex="0.4"
lazy_static = "1.4"
qrcode = "0.12"
image = "0.23"
clipboard = "0.5"
tar = "0.4"
flate2 = "1.0"
pidlock = "0.1"
rusqlite = "0.27"
rocket = "0.4"
hotkey = { path = "../hotkey" }
modeldata = { path = "../modeldata" }
webserver = { path = "../webserver" }
qttypes = { version = "0.2", features = [ "qtquick" ] }
tokio = { version = "1.17", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
semver = "1.0"
cpp_build = "0.5"
embed-resource = "1.7"
