[package]
name = "hotkey"
version = "0.3.0"
license = "MIT"
description = "Register global hotkeys"
documentation = "https://docs.rs/hotkey"
repository = "https://github.com/UnwrittenFun/hotkey-rs"
authors = ["James Birtles <jameshbirtles@gmail.com>"]
edition = "2018"

[dependencies]
x11-dl = "2.18.1"
