[package]
name = "webserver"
version = "0.1.0"
authors = ["heng30 <2238288979@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rocket = "0.4"
lazy_static = "1.4"
platform-dirs = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
